# ShioRIS3LE

./: .gitignore  3D_SEGMENTATION_MODELS_GUIDE.md  BUILD_INSTRUCTIONS_WHISPER.md  CMakeLists.txt  COORDINATE_FIX_TODO.md  CUDA_INSTALLATION_GUIDE.md  DEBUG_BEAM_DATA.md  GPU_FIX_INSTRUCTIONS.md  GPU_MEMORY_TROUBLESHOOTING.md  MACOS_REBUILD_INSTRUCTIONS.md  ONNX_VRAM_OPTIMIZATION.md  PR_DESCRIPTION.md  README.md  VISIONPRO_SETUP.md  WHISPER_VOICE_MODE_IMPLEMENTATION.md  build.ps1  build_windows_en.ps1  clean_build.ps1  cleanup_calculated_doses.sql  diagnose_gpu.sh
cmake/: MacOSXBundleInfo.plist.in
docs/: AI_Operations_Refinement.md  AI_Segmentation_User_Guide.md  LmStudioClient_Usage.md  cuda_backend_build_test.md  cyberknife_beam_data.md  cyberknife_dose_algorithms.md  cyberknife_dose_formula.md  cyberknife_rtx3090_setup.md  gpu_dose_calculation.md  gpu_macos_notes.md  improved_system_prompt_v6.txt
include/: mainwindow.h  qcustomplot.h  theme_manager.h
include/ai/: ai_segmentation_helper.h  audio_recorder.h  linux_auto_segmenter.h  lmstudio_client.h  onnx_segmenter.h  segmentation_pipeline.h  whisper_client.h
include/brachy/: brachy_dose_calculator.h  dwell_time_optimizer.h  ir_source_data.h
include/cyberknife/: beam_data_locator.h  beam_data_manager.h  beam_data_parser.h  cuda_dose_backend.h  dose_calculator.h  geometry_calculator.h  gpu_dose_backend.h  metal_dose_backend.h  multi_gpu_cuda_manager.h  opencl_dose_backend.h
include/data/: file_structure_manager.h  metadata_generator.h  multi_modality_manager.h
include/database/: database_manager.h  database_sync_manager.h  smart_scanner.h
include/dicom/: brachy_plan.h  brachy_source.h  dicom_reader.h  dicom_volume.h  dose_evaluation_point.h  dose_isosurface.h  dose_resampled_volume.h  dpsd_calculator.h  dvh_calculator.h  rtdose_volume.h  rtstruct.h  structure_surface.h
include/export/: usdz_exporter.h
include/platform/: macos_audio_permissions.h
include/visualization/: auto_segmentation_dialog.h  collapsible_group_box.h  data_window.h  dicom_viewer.h  dose_profile_window.h  dpsd_window.h  dvh_window.h  fusion_dialog.h  gamma_analysis_window.h  license_dialog.h  opengl_3d_widget.h  opengl_image_widget.h  quad_viewer.h  quad_viewer_window.h  random_study_dialog.h  translator_window.h  volume_viewer.h  volume_viewer_window.h
include/web/: web_server.h
resources/: cyberknife_density_table.csv  resources.qrc
resources/images/: README.md  ShioRIS3.icns
resources/sql/: create_tables.sql
scripts/: create_icon.sh  generate_ssl_cert.sh  setup_linux_autosegmentation.sh
scripts/model_tools/: MONAI_ONNX_EXPORT_README.md  README.md  create_lightweight_model.py  download_totalsegmentator.sh  export_monai_to_onnx.py  export_totalseg_to_onnx.py  test_model.py
src/: main.cpp  mainwindow.cpp  qrcodegen.cpp  theme_manager.cpp
src/ai/: ai_segmentation_helper.cpp  audio_recorder.cpp  linux_auto_segmenter.cpp  lmstudio_client.cpp  onnx_segmenter.cpp  segmentation_pipeline.cpp  whisper_client.cpp
src/brachy/: brachy_dose_calculator.cpp  dwell_time_optimizer.cpp  ir_source_data.cpp
src/cyberknife/: beam_data_locator.cpp  beam_data_manager.cpp  beam_data_parser.cpp  cuda_dose_backend.cu  cuda_kernels.cu  dose_calculator.cpp  geometry_calculator.cpp  gpu_dose_backend.cpp  metal_dose_backend.mm  metal_kernels.metal  multi_gpu_cuda_manager.cpp  opencl_dose_backend.cpp  opencl_kernels.cl
src/data/: file_structure_manager.cpp  metadata_generator.cpp  multi_modality_manager.cpp
src/database/: database_manager.cpp  database_sync_manager.cpp  smart_scanner.cpp
src/dicom/: brachy_plan.cpp  dicom_reader.cpp  dicom_volume.cpp  dose_isosurface.cpp  dose_resampled_volume.cpp  dpsd_calculator.cpp  dvh_calculator.cpp  rtdose_volume.cpp  rtstruct.cpp  structure_surface.cpp
src/export/: usdz_exporter.cpp
src/platform/: macos_audio_permissions.mm
src/visualization/: auto_segmentation_dialog.cpp  collapsible_group_box.cpp  data_window.cpp  dicom_viewer.cpp  dose_profile_window.cpp  dpsd_window.cpp  dvh_window.cpp  fusion_dialog.cpp  gamma_analysis_window.cpp  license_dialog.cpp  opengl_3d_widget.cpp  opengl_image_widget.cpp  quad_viewer.cpp  quad_viewer_window.cpp  random_study_dialog.cpp  translator_window.cpp  volume_viewer.cpp  volume_viewer_window.cpp
src/web/: web_server.cpp
tools/: check_cuda_devices.cu
web_client/: index.html  version.json
web_client/css/: style.css
web_client/js/: api_client.js  main.js  volume_renderer_v8.js  vr_controller.js
